# SiVo-python

./: Editor.py  README.md  SiVo.py  Sythengine.py  TTS.py  TTSEditor.py  XmlReader.py  monoLabel.py  outLab.Audacity.lab  pitch.py  test.py  test.xml  wav.py  write_xml.py
dic/ch/: Makefile  Makefile.am  Makefile.in  chinese.shift_jis.conf  chinese.shift_jis.table
dic/da/: danish.shift_jis.table  danish.utf_8.table
dic/du/: Duch.utf_8.table
dic/en/: Makefile  Makefile.am  Makefile.in  english.euc_en.conf  english.shift_jis.table  english.utf_8.conf  english.utf_8.table
dic/fi/: Makefile  Makefile.am  Makefile.in  finnish.shift_jis.conf  finnish.utf_8.table
dic/fr/: Makefile  Makefile.am  Makefile.in  french.euc_fr.conf  french.euc_fr.table  french.shift_jis.table  french.utf_8.conf
dic/it/: Makefile  Makefile.am  Makefile.in  italian.shift_jis.conf  italian.shift_jis.table
dic/ja/: Makefile  Makefile.in  japanese.shift_jis.conf  japanese.shift_jis.table  japanese.utf_8.table
dic/ko/: Makefile  Makefile.am  Makefile.in  korean.euc_ko.conf  korean.utf_8.table
dic/ru/: russian.shift_jis.conf  russian.utf_8.table
dic/sp/: Makefile  Makefile.am  Makefile.in  spanish.utf_8.conf  spanish.utf_8.table
