
EXTRA_DIST = chinese.euc_ch.conf chinese.euc_ch.table chinese.shift_jis.conf chinese.shift_jis.table chinese.utf_8.conf chinese.utf_8.table chinese.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = chinese.euc_ch.conf chinese.euc_ch.table chinese.shift_jis.conf chinese.shift_jis.table chinese.utf_8.conf chinese.utf_8.table chinese.macron
