
EXTRA_DIST = english.euc_en.conf english.euc_en.table english.shift_jis.conf english.shift_jis.table english.utf_8.conf english.utf_8.table english.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = english.euc_en.conf english.euc_en.table english.shift_jis.conf english.shift_jis.table english.utf_8.conf english.utf_8.table english.macron
