
EXTRA_DIST = finnish.shift_jis.conf finnish.shift_jis.table finnish.utf_8.conf finnish.utf_8.table finnish.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = finnish.shift_jis.conf finnish.shift_jis.table finnish.utf_8.conf finnish.utf_8.table finnish.macron
