
EXTRA_DIST = french.euc_fr.conf french.euc_fr.table french.shift_jis.conf french.shift_jis.table french.utf_8.conf french.utf_8.table french.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = french.euc_fr.conf french.euc_fr.table french.shift_jis.conf french.shift_jis.table french.utf_8.conf french.utf_8.table french.macron
