
EXTRA_DIST = italian.shift_jis.conf japanese.shift_jis.table italian.utf_8.conf italian.utf_8.table italian.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = italian.shift_jis.conf italian.shift_jis.table italian.utf_8.conf italian.utf_8.table italian.macron
