
EXTRA_DIST = korean.euc_ko.conf korean.euc_ko.table korean.shift_jis.conf korean.shift_jis.table korean.utf_8.conf korean.utf_8.table korean.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = korean.euc_ko.conf korean.euc_ko.table korean.shift_jis.conf korean.shift_jis.table korean.utf_8.conf korean.utf_8.table korean.macron
