
EXTRA_DIST = spanish.shift_jis.conf spanish.shift_jis.table spanish.utf_8.conf spanish.utf_8.table spanish.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = spanish.shift_jis.conf spanish.shift_jis.table spanish.utf_8.conf spanish.utf_8.table spanish.macron
